--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Personal-Website</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section class="heading-area">
+        <div class="half-width container">
+            <h2>Hello I'm</h2>
+            <h1>Jack Smith</h1>
+            <p>You might saw me jumping, climbing buildings, and stopping tarins. But nobody pays me a dime for that work</p>
+            <a class="link-button" target="_blank" href="https://www.facebook.com/profile.php?id=100080270696859">Hire me</a>
+        </div>
+        <div class="half-width">
+            <img src="images/peter.png" alt="">
+        </div>
+    </section>
 </body>
 </html>
