birgraphy area complete

--- a/index.html
+++ b/index.html
@@ -20,8 +20,16 @@
             <img src="images/peter.png" alt="">
         </div>
     </section>
-    <div class="rasel">
-        <h1>this is rasel</h1>
-    </div>
+
+    <section class="biography-area">
+        <div class="half-width dream-image">
+            <img src="images/peter_dream.png" alt="">
+        </div>
+        <div class="half-width rule">
+            <h2 class="heading-h2">Biography</h2>
+            <p>Elizabeth II (1926–2022) was Queen of the United Kingdom and other Commonwealth realms from 6 February 1952 until her death. The first child of the Duke and Duchess of York (later King George VI and Queen Elizabeth), she became heir presumptive when the duke became king in 1936 upon the abdication of</p>
+            <a class="link-button" target="_blank" href="https://www.facebook.com/profile.php?id=100080270696859">Download cv</a>
+        </div>
+    </section>
 </body>
 </html>
