--- a/index.html
+++ b/index.html
@@ -31,5 +31,38 @@
             <a class="link-button" target="_blank" href="https://www.facebook.com/profile.php?id=100080270696859">Download cv</a>
         </div>
     </section>
+
+    <section class="work-area">
+        <div class="work-heading">
+            <h2>My letest work</h2>
+        </div>
+        <div class="work-images">
+            <div class="work-img">
+                <img src="images/latest-work/work-1.png" alt="">
+            </div>
+            <div class="work-img">
+                <img src="images/latest-work/work-2.jpg" alt="">
+            </div>
+            <div class="work-img">
+                <img src="images/latest-work/work-3.jpg" alt="">
+            </div>
+        </div>
+    </section>
+
+    <section class="feedback-area">
+        <div class="work-heading feedback">
+            <h2>What Client are say</h2>
+            <h3>Bruce Moccy</h3>
+            <span>Founder & CEO Alies</span>
+            <div class="description">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo nisi ea nemo at fugit dolorem asperiores, quod fugiat voluptas. Amet.</p>
+            </div>
+            <div class="massage-area">
+                <span>Leave me a message in the</span>
+                <h2>bijoy.hasan09@gmail.com</h2>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
